added MIT.md file, corrected errors in my css file

--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                     -- Indian Prime Minister Manmohan Singh
                 </p>
             </div>
-            <h4>If you have time, you should read more about this incredible human being on his <a id="tribute-link"
-                    href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-tribute-page"
-                    target="_blank">Wikipedia entry</a>.</h4>
+            <h4>If you have time, you should read more about this incredible human being on his</h4>
         </div>,
 
     </main>
